[#354] Feat: 판정 되묻기
